[gd_scene load_steps=2 format=3 uid="uid://cb2g8v7gwk37k"]

[ext_resource type="Script" path="res://ui/debug/debug_layer.gd" id="1_3xm6f"]

[node name="DebugLayer" type="CanvasLayer"]
layer = 128
script = ExtResource("1_3xm6f")

[node name="DebugUIContainer" type="MarginContainer" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="DebugUIContainer"]
layout_mode = 2

[node name="DebugTabBar" type="TabBar" parent="DebugUIContainer/VBoxContainer"]
layout_mode = 2

[node name="DebugContentContainer" type="MarginContainer" parent="DebugUIContainer/VBoxContainer"]
layout_mode = 2
